# Tx-grid

./: .gitignore  .markdownlint.yml  .shellcheckrc  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GITHUB_RULES.md  LICENSE  README.md  github_finegrainedtoken.txt  rustfmt.toml  v1issues.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  quality.yml  release.yml
docs/: architecture.md  configuration.md  decision-log.md  keybindings.md  manual-test-plan.md  problem-statement.md  product-scope.md  release-checklist.md  risks.md  testing.md  troubleshooting.md  user-personas.md  ux-contract.md
instructions/: hermes_overnight_workflow_instructions.md  tmux-taskgrid-spec-v3.md
scripts/: dev-fixture-session.sh  install.sh  open_taskgrid.sh  taskgrid.tmux  test-e2e.sh  txgrid_auto_sync.sh  txgrid_pat.txt  txgrid_pr_api.py
src/: cli.rs  config.rs  errors.rs  logging.rs  main.rs
src/models/: mod.rs  pane.rs  process.rs  task.rs
src/services/: mod.rs  process_service.rs  task_service.rs  tmux_service.rs
src/ui/: events.rs  layout.rs  mod.rs  render.rs  state.rs
src/utils/: format.rs  parse.rs
